# Zerokan-WT_Flight_Recorder

./: .gitignore  CMakeLists.txt  README.md  Zerokan_WT_Flight_Recorder.qrc  async_client.cpp  async_client.h  client_state.cpp  client_state.h  damages.cpp  damages.h  game_state.cpp  game_state.h  http_client.cpp  http_client.h  hudmsg_reader.cpp  hudmsg_reader.h  ini_Accessor.cpp  ini_Accessor.h  ini_accessor.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting_form.cpp  setting_form.h  setting_form.ui  user.cpp  user.h
apps/data/: records.csv  revange_list.csv  setting.ini
data/: records.csv  revange_list.csv  setting.ini
localhost_8111/: hudmsg.json  memo.txt
localhost_8111_2/: hudmsg  hudmsg_eng_ver  map_info.json  map_obj.json  mission.json  mission_after.json  state
trash/: http_client.cpp  http_client.h
